fixed calendar title bugs on ie11

--- a/lunch-client/styles/components/calendar.scss
+++ b/lunch-client/styles/components/calendar.scss
@@ -67,6 +67,7 @@
     }
     &.title {
         height: 34px;
+        padding: 0 16px;
         background: #efefef;
         font-weight: 600;
         font-size: 14px;
